source/objects/Sales_Order__c/fields/Bill_to_City__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_City__c</fullName>
    <label>Bill to City</label>
    <length>200</length>
    <type>Text</type>
</CustomField>