source/objects/Sales_Order__c/fields/Bill_to_Name__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Name__c</fullName>
    <label>Bill to Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>