source/objects/Sales_Order__c/fields/Bluescape_Org_Date__c.field-meta.xml
<CustomField>
    <fullName>Bluescape_Org_Date__c</fullName>
    <description>The date when we should invoice/rev rec on licenses</description>
    <inlineHelpText>The date when the client gets access to the Bluescape Org/User Licenses (for new customers) or contract sign/closed date (for existing customers) whichever is later</inlineHelpText>
    <label>Bluescape Org Date</label>
    <type>Date</type>
</CustomField>