source/objects/Sales_Order__c/fields/Date_User_Licenses_Available__c.field-meta.xml
<CustomField>
    <fullName>Date_User_Licenses_Available__c</fullName>
    <label>Date User Licenses Available</label>
    <type>Date</type>
</CustomField>