source/objects/Sales_Order__c/fields/Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Number__c</fullName>
    <label>Document Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>