source/objects/Sales_Order__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>