source/objects/Sales_Order__c/fields/Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Install_Date__c</fullName>
    <description>Date of Installation needed by account for rev rec</description>
    <inlineHelpText>Date of Installaion and accounting revenue recognition</inlineHelpText>
    <label>Install Date</label>
    <type>Date</type>
</CustomField>