source/objects/Sales_Order__c/fields/Launch_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Launch_Call_Date__c</fullName>
    <description>The date when the controller is shipped</description>
    <inlineHelpText>The date when the controller is shipped</inlineHelpText>
    <label>Ship Date</label>
    <type>Date</type>
</CustomField>