source/objects/Sales_Order__c/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <description>This  is the Order Id</description>
    <displayFormat>{000000}</displayFormat>
    <externalId>true</externalId>
    <label>Order Id</label>
    <type>AutoNumber</type>
</CustomField>