source/objects/Sales_Order__c/fields/Qty_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Qty_of_Request__c</fullName>
    <label>Qty of Request</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>