source/objects/Sales_Order__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <label>Reference Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>