source/objects/Sales_Order__c/fields/Secondary_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Orders (Secondary Opportunity)</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>