source/objects/Sales_Order__c/fields/Service_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_Id__c</fullName>
    <label>Service Contract Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>