source/objects/Sales_Order__c/fields/Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Ship_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>