source/objects/Sales_Order__c/fields/Ship_to_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Address_1__c</fullName>
    <label>Ship to Address 1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>