source/objects/Sales_Order__c/fields/Ship_to_City__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_City__c</fullName>
    <label>Ship to City</label>
    <length>200</length>
    <type>Text</type>
</CustomField>