source/objects/Sales_Order__c/fields/Ship_to_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Name__c</fullName>
    <label>Ship to Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>