source/objects/Sales_Order__c/fields/Ship_to_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Zip_Code__c</fullName>
    <label>Ship to Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>