source/objects/Sales_Order__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>Intacct State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>