source/objects/Sales_Order__c/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <label>Terms</label>
    <length>40</length>
    <type>Text</type>
</CustomField>