source/objects/Sales_Order__c/validationRules/Install_Date_for_Status_Installed.validationRule-meta.xml
<ValidationRule>
    <fullName>Install_Date_for_Status_Installed</fullName>
    <active>false</active>
    <errorConditionFormula>IF(  ISPICKVAL(Status__c, &#39;Installed&#39;),  ISBLANK( Install_Date__c ) , FALSE)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Install Date must be filled for Status = Installed</errorMessage>
</ValidationRule>