source/objects/Sales_Order__c/validationRules/Launch_Call_Date_for_Status_Installed.validationRule-meta.xml
<ValidationRule>
    <fullName>Launch_Call_Date_for_Status_Installed</fullName>
    <active>false</active>
    <errorConditionFormula>IF(  ISPICKVAL(Status__c, &#39;Installed&#39;),  ISBLANK(  Launch_Call_Date__c  ) , FALSE)</errorConditionFormula>
    <errorMessage>Launch Call Date must be filled for Status = Installed</errorMessage>
</ValidationRule>