source/objects/Sales_Order__c/validationRules/Service_Contract_required_for_Installati.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Contract_required_for_Installati</fullName>
    <active>false</active>
    <description>Service contract is required to set Status to &quot;Installed&quot;</description>
    <errorConditionFormula>IF(  ISPICKVAL(Status__c, &#39;Installed&#39;),  ISBLANK( Service_Contract_Id__c ) , FALSE)</errorConditionFormula>
    <errorMessage>Service Contract must exist for Status = Installed</errorMessage>
</ValidationRule>