source/objects/Sales_Order__c/listViews/All_Sales_Orders.listView-meta.xml
<ListView>
    <fullName>All_Sales_Orders</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Intacct_Entity__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Sales Orders</label>
</ListView>